--- a/client/index.html
+++ b/client/index.html
@@ -25,13 +25,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <script>
-      // Set API URL at runtime - works even if Vite env vars weren't available at build time
-      window.__API_URL__ = 'https://uk-crm-backend.onrender.com';
-    </script>
   </head>
   <body>
     <div id="root"></div>
+    <script>
+      // Set API URL IMMEDIATELY before any modules load
+      // This must run before the module script below
+      window.__API_URL__ = 'https://uk-crm-backend.onrender.com';
+    </script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
