--- a/client/index.html
+++ b/client/index.html
@@ -25,6 +25,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="dns-prefetch" href="https://uk-crm-backend.onrender.com">
     <script>
       // Set API URL IMMEDIATELY - must run before any modules load
       // This is in <head> to ensure it runs before the module script
